# ruxml

./: .gitignore  Rakefile  ruxml.gemspec
ext/: CMakeLists.txt  test.cpp
ext/ruxml/: array.cpp  array.hpp  extconf.rb  memory.cpp  memory.hpp  parser.cpp  parser.hpp  ruxml.cpp  str.cpp  str.hpp
lib/: ruxml.rb
lib/ruxml/: parse_error.rb  parser.rb  version.rb
spec/: basic_spec.rb
spec/fixtures/: text.xml
